Bug 223004 - System Settings Dialog crashed after special sequence of commands "Get New X" and "Back"
Summary: System Settings Dialog crashed after special sequence of commands "Get New X"...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: knewstuff (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Jeremy Whiting
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-16 18:14 UTC by T. Columbus
Modified: 2010-03-10 14:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description T. Columbus 2010-01-16 18:14:40 UTC
Application that crashed: systemsettings
Version of the application: 1.0
KDE Version: 4.3.2 (KDE 4.3.2)
Qt Version: 4.5.2
Operating System: Linux 2.6.31-17-generic x86_64
Distribution: Ubuntu 9.10

What I was doing when the application crashed:
The following sequence of actions leads to this crash:
1. Open Appearance->Splash Screen->Get New Themes
2. Go "Back" to all system settings without closing the download dialog
4. Opening Appearance->Splash Screen->Get New Themes now crashes

This can be reproduced on my machine.

 -- Backtrace:
Application: System Settings (systemsettings), signal: Segmentation fault
The current source language is "auto; currently c".
[KCrash Handler]
#5  0x00007f67735fbfd8 in QWidget::show (this=0x7fff744ee550) at /usr/include/qt4/QtGui/qwidget.h:473
#6  KNS::Engine::downloadDialogModal (this=0x7fff744ee550) at ../../../knewstuff/knewstuff2/engine.cpp:190
#7  0x00007f67738187de in SplashInstaller::slotNew (this=0x2ad5e90) at ../../../ksplash/kcm/installer.cpp:482
#8  0x00007f677381e871 in SplashInstaller::qt_metacall (this=0x2ad5e90, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff744ee6a0) at ./installer.moc:78
#9  0x00007f67826d1ddc in QMetaObject::activate (sender=0x2ac8430, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3113
#10 0x00007f678384f8e7 in QAbstractButton::clicked (this=0x2d9c610, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:200
#11 0x00007f67835b141b in QAbstractButtonPrivate::emitClicked (this=0x302eba0) at widgets/qabstractbutton.cpp:543
#12 0x00007f67835b302b in QAbstractButtonPrivate::click (this=0x302eba0) at widgets/qabstractbutton.cpp:536
#13 0x00007f67835b3275 in QAbstractButton::mouseReleaseEvent (this=0x2ac8430, e=0x7fff744eedc0) at widgets/qabstractbutton.cpp:1115
#14 0x00007f678329c9c0 in QWidget::event (this=0x2ac8430, event=0x7fff744eedc0) at kernel/qwidget.cpp:7549
#15 0x00007f678324defc in QApplicationPrivate::notify_helper (this=0x2448780, receiver=0x2ac8430, e=0x7fff744eedc0) at kernel/qapplication.cpp:4056
#16 0x00007f6783255011 in QApplication::notify (this=<value optimized out>, receiver=0x2ac8430, e=0x7fff744eedc0) at kernel/qapplication.cpp:3758
#17 0x00007f6783e84ab6 in KApplication::notify (this=0x7fff744f3460, receiver=0x2ac8430, event=0x7fff744eedc0) at ../../kdeui/kernel/kapplication.cpp:302
#18 0x00007f67826bcc2c in QCoreApplication::notifyInternal (this=0x7fff744f3460, receiver=0x2ac8430, event=0x7fff744eedc0) at kernel/qcoreapplication.cpp:610
#19 0x00007f67832548e0 in QCoreApplication::sendSpontaneousEvent (receiver=0x2ac8430, event=0x7fff744eedc0, alienWidget=0x2ac8430, nativeWidget=0x24ba540, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#20 QApplicationPrivate::sendMouseEvent (receiver=0x2ac8430, event=0x7fff744eedc0, alienWidget=0x2ac8430, nativeWidget=0x24ba540, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at kernel/qapplication.cpp:2924
#21 0x00007f67832baa0e in QETWidget::translateMouseEvent (this=0x24ba540, event=<value optimized out>) at kernel/qapplication_x11.cpp:4409
#22 0x00007f67832b9aa9 in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff744f08f0) at kernel/qapplication_x11.cpp:3550
#23 0x00007f67832e2d0c in x11EventSourceDispatch (s=<value optimized out>, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#24 0x00007f677f07cbce in g_main_dispatch (context=0x244ad20) at /build/buildd/glib2.0-2.22.3/glib/gmain.c:1960
#25 IA__g_main_context_dispatch (context=0x244ad20) at /build/buildd/glib2.0-2.22.3/glib/gmain.c:2513
#26 0x00007f677f080598 in g_main_context_iterate (context=0x244ad20, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.22.3/glib/gmain.c:2591
#27 0x00007f677f0806c0 in IA__g_main_context_iteration (context=0x244ad20, may_block=1) at /build/buildd/glib2.0-2.22.3/glib/gmain.c:2654
#28 0x00007f67826e51a6 in QEventDispatcherGlib::processEvents (this=0x241fc80, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#29 0x00007f67832e24be in QGuiEventDispatcherGlib::processEvents (this=0x2d9c610, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#30 0x00007f67826bb532 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#31 0x00007f67826bb904 in QEventLoop::exec (this=0x7fff744f0c30, flags=) at kernel/qeventloop.cpp:201
#32 0x00007f67735fbcbc in KNS::EnginePrivate::workflow (this=0x2d75a30) at ../../../knewstuff/knewstuff2/engine.cpp:145
#33 0x00007f67735fc06a in KNS::Engine::downloadDialogModal (this=0x7fff744f0ce0) at ../../../knewstuff/knewstuff2/engine.cpp:199
#34 0x00007f67738187de in SplashInstaller::slotNew (this=0x2ab1ea0) at ../../../ksplash/kcm/installer.cpp:482
#35 0x00007f677381e871 in SplashInstaller::qt_metacall (this=0x2ab1ea0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff744f0e30) at ./installer.moc:78
#36 0x00007f67826d1ddc in QMetaObject::activate (sender=0x2933050, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3113
#37 0x00007f678384f8e7 in QAbstractButton::clicked (this=0x2d9c610, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:200
#38 0x00007f67835b141b in QAbstractButtonPrivate::emitClicked (this=0x2ab4b50) at widgets/qabstractbutton.cpp:543
#39 0x00007f67835b302b in QAbstractButtonPrivate::click (this=0x2ab4b50) at widgets/qabstractbutton.cpp:536
#40 0x00007f67835b3275 in QAbstractButton::mouseReleaseEvent (this=0x2933050, e=0x7fff744f1550) at widgets/qabstractbutton.cpp:1115
#41 0x00007f678329c9c0 in QWidget::event (this=0x2933050, event=0x7fff744f1550) at kernel/qwidget.cpp:7549
#42 0x00007f678324defc in QApplicationPrivate::notify_helper (this=0x2448780, receiver=0x2933050, e=0x7fff744f1550) at kernel/qapplication.cpp:4056
#43 0x00007f6783255011 in QApplication::notify (this=<value optimized out>, receiver=0x2933050, e=0x7fff744f1550) at kernel/qapplication.cpp:3758
#44 0x00007f6783e84ab6 in KApplication::notify (this=0x7fff744f3460, receiver=0x2933050, event=0x7fff744f1550) at ../../kdeui/kernel/kapplication.cpp:302
#45 0x00007f67826bcc2c in QCoreApplication::notifyInternal (this=0x7fff744f3460, receiver=0x2933050, event=0x7fff744f1550) at kernel/qcoreapplication.cpp:610
#46 0x00007f67832548e0 in QCoreApplication::sendSpontaneousEvent (receiver=0x2933050, event=0x7fff744f1550, alienWidget=0x2933050, nativeWidget=0x24ba540, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#47 QApplicationPrivate::sendMouseEvent (receiver=0x2933050, event=0x7fff744f1550, alienWidget=0x2933050, nativeWidget=0x24ba540, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at kernel/qapplication.cpp:2924
#48 0x00007f67832baa0e in QETWidget::translateMouseEvent (this=0x24ba540, event=<value optimized out>) at kernel/qapplication_x11.cpp:4409
#49 0x00007f67832b9aa9 in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff744f3080) at kernel/qapplication_x11.cpp:3550
#50 0x00007f67832e2d0c in x11EventSourceDispatch (s=<value optimized out>, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#51 0x00007f677f07cbce in g_main_dispatch (context=0x244ad20) at /build/buildd/glib2.0-2.22.3/glib/gmain.c:1960
#52 IA__g_main_context_dispatch (context=0x244ad20) at /build/buildd/glib2.0-2.22.3/glib/gmain.c:2513
#53 0x00007f677f080598 in g_main_context_iterate (context=0x244ad20, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.22.3/glib/gmain.c:2591
#54 0x00007f677f0806c0 in IA__g_main_context_iteration (context=0x244ad20, may_block=1) at /build/buildd/glib2.0-2.22.3/glib/gmain.c:2654
#55 0x00007f67826e51a6 in QEventDispatcherGlib::processEvents (this=0x241fc80, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#56 0x00007f67832e24be in QGuiEventDispatcherGlib::processEvents (this=0x2d9c610, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#57 0x00007f67826bb532 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#58 0x00007f67826bb904 in QEventLoop::exec (this=0x7fff744f33b0, flags=) at kernel/qeventloop.cpp:201
#59 0x00007f67826bdab9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#60 0x000000000040cbb9 in main (argc=<value optimized out>, argv=<value optimized out>) at ../../../systemsettings/app/main.cpp:51

This bug may be a duplicate of or related to bug 222060

Reported using DrKonqi
Comment 1 Dario Andres 2010-02-21 19:07:24 UTC
SVN commit 1093915 by darioandres:

- Port Splash Themes to KHNS3

BUG: 223004
CCMAIL: gladhorn@kde.org



 M  +1 -1      CMakeLists.txt  
 M  +5 -6      installer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1093915
Comment 2 Dario Andres 2010-02-21 19:09:40 UTC
SVN commit 1093918 by darioandres:

Backport to 4.4 of:
SVN commit 1093915 by darioandres:

- Port Splash Themes to KHNS3

BUG: 223004
CCMAIL: gladhorn@kde.org



 M  +1 -1      CMakeLists.txt  
 M  +5 -6      installer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1093918
Comment 3 Dario Andres 2010-02-21 19:41:38 UTC
I had to revert the commits because there is a Klassroom taking place to properly fix those issues, and backporting to 4.4 doesn't seem to be safe.
Comment 4 Frederik Gladhorn 2010-03-10 14:38:49 UTC
Fixed in revision 1101651 for KDE 4.5
Patch by Lasse Liehu.
Thanks!