- Port Splash Themes to KHNS3

BUG: 223004
CCMAIL: gladhorn@kde.org


svn path=/trunk/KDE/kdebase/workspace/; revision=1093915